--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,8 +104,8 @@ endif()
 #     set(LLAMA_EXTRA_FLAGS ${LLAMA_EXTRA_FLAGS} -DGGML_PERF)
 # endif()
 
-add_executable(chat
-    chat.cpp
+add_executable(server
+    server.cpp
     utils.cpp
     utils.h)
 
@@ -119,10 +119,10 @@ add_library(ggml
     ggml.h)
 
 target_compile_definitions(ggml PUBLIC ${LLAMA_EXTRA_FLAGS})
-target_compile_definitions(chat PUBLIC ${LLAMA_EXTRA_FLAGS})
+target_compile_definitions(server PUBLIC ${LLAMA_EXTRA_FLAGS})
 target_compile_definitions(quantize PUBLIC ${LLAMA_EXTRA_FLAGS})
 
 target_link_libraries(ggml PRIVATE ${LLAMA_EXTRA_LIBS})
 target_include_directories(ggml PUBLIC .)
 target_link_libraries(quantize PRIVATE ggml)
-target_link_libraries(chat PRIVATE ggml)
+target_link_libraries(server PRIVATE ggml)
