--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,12 +30,15 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install build-essential
+          wget https://boostorg.jfrog.io/artifactory/main/release/1.81.0/source/boost_1_81_0.tar.gz
+          tar xzf boost_1_81_0.tar.gz -C . --strip-components=1 boost_1_81_0/boost
+          
 
       - name: Build
         id: make_build
         run: |
           make
-
+        
       - name: Zip executables
         run: zip alpaca-linux.zip server
 
@@ -82,6 +85,15 @@ jobs:
           security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k $KEYCHAIN_PWD build.keychain
           /usr/bin/codesign --options runtime --force -s $MACOS_CERT_ID ./server_mac -v
 
+
+
+      - name: Clear
+        run: |
+          rm -rf boost
+          rm boost_1_81_0.tar.gz
+          
+          
+          
       - name: Zip executables
         run: zip alpaca.http-mac.zip server_mac
 
@@ -114,6 +126,9 @@ jobs:
       - name: Build
         id: cmake_build
         run: |
+          wget https://boostorg.jfrog.io/artifactory/main/release/1.81.0/source/boost_1_81_0.zip
+          7z x boost_1_81_0.zip boost_1_81_0/boost/*
+          mv boost_1_81_0/boost/ boost
           mkdir build
           cd build
           cmake ..
@@ -124,6 +139,13 @@ jobs:
         run: |
           7z a alpaca.http-win.zip .\build\Release\*
 
+
+      - name: Clear
+        run: |
+          rm -rf boost_1_81_0
+          rm -rf boost
+          rm boost_1_81_0.zip
+          
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
         with:
