--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
           make
         
       - name: Zip executables
-        run: zip alpaca-linux.zip server
+        run: zip alpaca.http-linux.zip server
 
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
@@ -66,7 +66,7 @@ jobs:
       - name: Build
         id: make_build
         run: |
-          make chat_mac
+          make server_mac
 
       - name: Codesign executable
         if: ${{ ( github.event_name == 'push' && github.ref == 'refs/heads/master' ) || github.event.inputs.create_release == 'true' }}
@@ -105,7 +105,7 @@ jobs:
           PROD_MACOS_NOTARIZATION_TEAM_ID: ${{ secrets.PROD_MACOS_NOTARIZATION_TEAM_ID }}
         run: |
           xcrun notarytool store-credentials "notarytool-profile" --apple-id "$PROD_MACOS_NOTARIZATION_APPLE_ID" --team-id "$PROD_MACOS_NOTARIZATION_TEAM_ID" --password "$PROD_MACOS_NOTARIZATION_PWD"
-          xcrun notarytool submit "alpaca-mac.zip" --keychain-profile "notarytool-profile" --wait
+          xcrun notarytool submit "alpaca.http-mac.zip" --keychain-profile "notarytool-profile" --wait
 
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
@@ -126,7 +126,7 @@ jobs:
       - name: Build
         id: cmake_build
         run: |
-          wget https://boostorg.jfrog.io/artifactory/main/release/1.81.0/source/boost_1_81_0.zip
+          Invoke-WebRequest -Uri https://boostorg.jfrog.io/artifactory/main/release/1.81.0/source/boost_1_81_0.zip -OutFile boost_1_81_0.zip
           7z x boost_1_81_0.zip boost_1_81_0/boost/*
           mv boost_1_81_0/boost/ boost
           mkdir build
